updating HTML folder

--- a/IntroToHTML/MultiPageSite/about.html
+++ b/IntroToHTML/MultiPageSite/about.html
@@ -10,11 +10,17 @@
 
 <body>
   <h1>This is the About page</h1>
+  <p>Details and details</p> 
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia omnis tempore consectetur nam deserunt. Possimus, consequatur hic! Commodi quo dolorum vero nobis impedit aut rerum ipsum mollitia cum asperiores. Provident.</p>
   <!-- Link to the home page -->
-  <a href="index.html">LINK TO HOME PAGE</a>
+  LINK TO <a href="index.html">HOME</a> PAGE
   <hr>
   <!-- Link to the contact page -->
-  <a href="contact.html">LINK TO CONTACT PAGE</a>
+  LINK TO <a href="contact.html">CONTACT</a> PAGE
+  <!-- adding comments -->
+  <br>
+  <hr>
+  <a href="index.html"><img src="gitcat.png" alt="gitcat"></a>
 </body>
 
 </html>
