--- a/IntroToHTML/MultiPageSite/contact.html
+++ b/IntroToHTML/MultiPageSite/contact.html
@@ -11,19 +11,19 @@
 <body>
   <h1>This is the Contact page</h1>
   <ul type"circle">
-    John
-    Lori
-    Austin
-    Todd
-    Colby
-    Paul
-    Jamie
-    Mark
-    Jamie
-
+    <li>John</li>
+    <li>Lori</li>
+    <li>Austin</li>
+    <li>Todd</li>
+    <li>Colby</li>
+    <li>Paul</li>
+    <li>Jamie</li>
+    <li>Mark</li>
+    <li>Jamie</li>
   </ul>
+
   <!-- Link to the home page -->
-  LINK TO <a href="index.html">HOME</a>PAGE
+  LINK TO <a href="index.html">HOME</a> PAGE
   <hr>
   <!-- Link to the about page -->
   <a href="about.html">LINK TO ABOUT PAGE</a>
