--- a/IntroToHTML/MultiPageSite/index.html
+++ b/IntroToHTML/MultiPageSite/index.html
@@ -13,9 +13,9 @@
   <h1>This is the home page</h1>
   <hr>
   <!-- Link to the about page -->
-  <a href="about.html">LINK</a> TO ABOUT PAGE
+  LINK TO <a href="about.html">ABOUT</a> PAGE
   <hr>
   <!-- Link to the contact page -->
-  LINK TO <a href="contact.html">CONTACT PAGE</a>
+  LINK TO <a href="contact.html">CONTACT</a> PAGE
 </body>
 </html>
